...
    <string name="pass_problem">"Sorry, but there was a problem processing this card. If you want you can send me this card so I can check what the problem is and improve the software."</string>
    <string name="problem">"Problem"</string>
    <string name="send">"Send"</string>
    <string name="delete">"Delete!"</string>
    <string name="choose_location">"Choose Location"</string>
    <string name="boarding_pass">"Boarding Pass"</string>
    <string name="category_event">"Event"</string>
    <string name="category_coupon">"Coupon"</string>
    <string name="category_storecard">"Store Card"</string>
    <string name="category_generic">"generic"</string>
    <string name="category_none">"no Category"</string>
    <string name="nav_more">"MORE"</string>
    <string name="nav_sort">"SORT"</string>
    <string name="nav_sort_category">"Category"</string>
...
    <string name="barcode_edit_button_add_barcode">Add Barcode</string>
    <string name="categories_voucher">voucher</string>
    <string name="edit_time">edit time</string>
    <string name="edit_location">edit location</string>
    <string name="add_front_field">Add front field</string>
    <string name="add_back_fields">Add back field</string>
    <string name="change_color_dialog_title">Select color</string>
    <string name="select_category_dialog_title">Select category</string>
    <string name="barcode_edit_code128">code 128</string>
    <string name="barcode_edit_code39">code 39</string>
    <string name="add_footer_image">add footer image</string>
    <string name="add_logo_image">add logo image</string>
    <string name="add_header_image">add header image</string>
    <string name="add_barcode">add Barcode</string>
...
