...
                    android:lineSpacingExtra="4dp"
                    android:text="@string/empty_text_view_body"/>

        </LinearLayout>

        <net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/fam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                app:layout_behavior="com.glocalsaino.miwallet.ui.MyShyFABBehavior"
...
                fab:fab_addButtonColorPressed="@color/icon_green"
                fab:fab_addButtonPlusIconColor="@android:color/white"
                fab:fab_labelStyle="@style/menu_labels_style">

            <!-- Abrir archivo .pkpass desde el dispositivo -->
            <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_action_open_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_file_folder_open_wrapped"
                    android:visibility="gone"
                    fab:fab_colorNormal="@color/secondary"
                    fab:fab_colorPressed="@color/icon_green"
...
