<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_scan_qr"
            yourapp:showAsAction="always"
            android:title="@string/qr_scan_hint"
            android:icon="@drawable/ic_image_photo_camera"/>

    <item
            android:id="@+id/menu_emptytrash"
            yourapp:showAsAction="ifRoom"
            android:title="@string/emtytrash_label"
            android:icon="@drawable/ic_action_delete"/>

    <item
            android:id="@+id/menu_help"
            yourapp:showAsAction="ifRoom"
            android:title="@string/help_label"
            android:icon="@drawable/ic_action_help_outline"/>

</menu>